Update details of files with version numbers.

--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -67,11 +67,11 @@ FSF.</li>
 
 <li>Increment the version number in <code>gcc/version.c</code>, and
 put back the date stamp and (prerelease) annotation.  Increment the
-version numbers in <code>doc/include/gcc-common.texi</code>,
-<code>java/gcj.texi</code>, and <code>f/root.texi</code>.  (Branches
-cut prior to GCC 3.3 have the version number stored in even more
+version number in <code>doc/include/gcc-common.texi</code>.  (Branches
+cut prior to GCC 3.3 have the version number stored in more
 places.  You must edit all the files named <code>[vV]ersion.c</code>
-as well, and <code>gcc/ada/gnatvsn.ads</code>.)</li>
+as well, and <code>java/gcj.texi</code>, <code>f/root.texi</code>, and
+<code>gcc/ada/gnatvsn.ads</code>.)</li>
 
 <li>Notify developers that checkins to the branch are once again
 allowed.</li>
