--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -27,8 +27,7 @@ cvs rtag -b -r gcc-3_1-branchpoint gcc-3_1-branch gcc
 the next major release number (e.g., 3.2 instead of 3.1).</li>
 
 <li>Update <code>doc/include/gcc-common.texi</code> on the mainline to 
-use the next major release number.  Also, update the version number in 
-<code>java/gcj.texi</code> and <code>f/root.texi</code>.</li>
+use the next major release number.</li>
 
 <li>Create a new <code>gcc-<var>VERSION</var></code> directory in the
 <code>wwwdocs</code> repository and populate it with initial copies
@@ -40,7 +39,7 @@ of <code>buildstat.html</code>, <code>changes.html</code>, and
 release branch, the current release series, and active development
 (mainline).  Update the version and development stage for mainline.</li>
 
-<li>Update <code>f/root.texi</code> on the branch to use <code>@clear
+<li>Update <code>doc/include/gcc-common.texi</code> on the branch to use <code>@clear
 DEVELOPMENT</code>.</li>
 
 <li>Update <code>maintainer-scripts/gcc_release</code> on the
