--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -271,12 +271,12 @@ stages of development, branch points, and releases:</p>
        |
        v
        +-- GCC 3.3 branch created ------+
-       |                                 \
+       |              (Dec 14 2002)      \
        :                                  v
-       :                                   GCC 3.3 release (Dec 15 2002)
+       :                                   GCC 3.3 release (Feb 15 2002)
        :                                    \
                                              v 
-                                           GCC 3.3.1 release (Feb 15 2003)
+                                           GCC 3.3.1 release (Apr 15 2003)
 
 </pre>
 
