Omit documentation for --stats.

--- a/htdocs/rsync.html
+++ b/htdocs/rsync.html
@@ -35,9 +35,7 @@ the repository.</p>
 
 <p>Other rsync options that you might want to use include
 <code>--verbose</code> and <code>--progress</code> to provide feedback,
-including during the initial phase that is otherwise silent, and
-<code>--stats</code>.</p>
-
+including during the initial phase that is otherwise silent.</p>
 
 <p>You can get rsync from its home page, 
 <a href="http://rsync.samba.org">rsync.samba.org</a>.</p>
