Delete the project I just finished; pluralize 'configure script'.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -697,7 +697,7 @@ already does this for <code>stdlib.h</code> and several others.)</p>
 <p>The real mess is in the debug info generators.</p>
 </li>
 
-<li>Clean up the configure script.
+<li>Clean up the configure scripts.
 
 <p>The horrible tests for assembler features particularly need to die,
 but there are plenty of other atrocities.  If you want a relatively
@@ -815,16 +815,6 @@ cross compiles.
 but if done it would be immensely useful.</p>
 </li>
 
-<li>Autoconfiscate the top level of the directory tree.
-
-<p>The top level is handled by a strange beast known as "Cygnus
-configure," which is understood by very few people.  If it were
-replaced by an autoconf script it would be much easier to work
-with.</p>
-
-<p>Unfortunately, you will need guru-level Make and shell script
-skills to even attempt this.</p>
-</li>
 </ul>
 
 <h2>Library infrastructure</h2>
