* gcj-3.3-status.html: Removed some extra blanks.

--- a/htdocs/java/gcj-3.3-status.html
+++ b/htdocs/java/gcj-3.3-status.html
@@ -8,7 +8,7 @@
 
 <h1>GCJ 3.3 status</h1>
 
-<h2> Bugs </h2>
+<h2>Bugs</h2>
 
 <p>We are tracking all bugs in Gnats.  Any bugs that we want to fix
 for the 3.3 release will be marked <em>high</em> priority.  You can
@@ -16,11 +16,11 @@ see this list <a
 href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitext=&amp;arrivedafter=&amp;arrivedbefore=&amp;modifiedafter=&amp;modifiedbefore=&amp;closedafter=&amp;closedbefore=&amp;category=&amp;category=java&amp;category=libgcj&amp;synopsis=&amp;confidential=&amp;severity=&amp;priority=&amp;priority=high&amp;responsible=&amp;state=&amp;state=open&amp;state=analyzed&amp;ignoreclosed=Ignore%20Closed&amp;class=&amp;submitter_id=&amp;originator=&amp;release=&amp;columns=category&amp;columns=state&amp;columns=class&amp;columns=priority&amp;columns=responsible&amp;columns=last_modified&amp;columns=synopsis&amp;displaydate=Display%20Current%20Date&amp;cmd=submit%20query&amp;sortby=Last-Modified&amp;.cgifields=confidential&amp;.cgifields=state&amp;.cgifields=columns&amp;.cgifields=priority&amp;.cgifields=displaydate&amp;.cgifields=responsible&amp;.cgifields=class&amp;.cgifields=submitter_id&amp;.cgifields=severity&amp;.cgifields=ignoreclosed&amp;.cgifields=category">here</a>.</p>
 
 
-<h2> Platforms </h2>
+<h2>Platforms</h2>
 
 <table border="1" width="100%">
 
-<tr><th> Platform </th> <th> Status </th> <th> Who </th> </tr>
+<tr><th>Platform</th> <th>Status</th> <th>Who</th> </tr>
 
 <!-- Use  bgcolor='#aaeeee' for ok platforms and packages
      Use  default           for things in unknown state
@@ -112,7 +112,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Ulrich Weigand </td>
 </tr>
 
-<tr> <td>linux -x- xscale-elf </td>
+<tr> <td>cross-building for xscale-elf</td>
      <td> &nbsp; </td>
      <td> Anthony Green </td>
 </tr>
@@ -158,7 +158,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </table>
 
 
-<h2> See Also </h2>
+<h2>See Also</h2>
 
 <p> It is also worth looking at the old <a
 href="gcj-3.1-status.html">gcj 3.1 status page</a> for comparison.  In
