Update old FAQ references.

--- a/htdocs/egcs-1.0/caveats.html
+++ b/htdocs/egcs-1.0/caveats.html
@@ -22,7 +22,7 @@
 
   <li> Some versions of the Linux kernel have bugs which prevent them
   from being compiled or from running when compiled by EGCS.  See
-  <a href="http://gcc.gnu.org/fom_serv/cache/24.html">the FAQ</a>
+  the FAQ (as shipped with EGCS 1.0)
   for additional information.</li>
 
   <li> In general, EGCS is more rigorous about rejecting invalid C++ code
