--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -11,7 +11,7 @@
   <li>GCC 2.95 will issue an error for invalid asm statements that had been
   silently accepted by earlier versions of the compiler.  This is particularly
   noticeable when compiling older versions of the Linux kernel (2.0.xx).
-  Please refer to the <a href="../faq.html#asmclobber">FAQ</a> for more
+  Please refer to the FAQ (as shipped with GCC 2.95) for more
   information on this issue.</li>
    
   <li>GCC 2.95 implements type based alias analysis to disambiguate memory
@@ -20,7 +20,7 @@
   GCC 2.95.  
 
   Please refer to the
-  <a href="http://gcc.gnu.org/fom_serv/cache/24.html">FAQ</a> for more
+  FAQ (as shipped with GCC 2.95) for more
   information on this issue.</li>
 
   <li>GCC 2.95 has a known bug in its handling of complex variables for
