--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -23,7 +23,7 @@
     in loops.</li>
     <li><a href="../news/alias.html">Type based alias analysis</a> is enabled by
     default.  Note this feature will expose bugs in the Linux kernel.  Please
-    refer to the <a href="http://gcc.gnu.org/fom_serv/cache/24.html">FAQ</a>
+    refer to the FAQ (as shipped with GCC 2.95)
     for additional information on this issue.</li>
     <li>Major revamp of GIV detection, combination and simplification to
     improve loop performance.</li>
