--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -50,7 +50,7 @@ sites</a>.</p>
 <li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/gnu/gcc/">sunsite.icm.edu.pl</a>, thanks to sunsite at icm dot edu dot pl</li>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
-<li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub2/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
+<li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/GNU/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>, thanks to ftpadm at ftp dot nctu dot edu dot tw</li>
 <li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to mirror at mirror dot ac dot uk</li>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/gcc.gnu.org/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
