--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -86,7 +86,7 @@ does not foo", "objc crashes when doing bar".</dd>
   <dt>c</dt>
   <dd>A problem with the C compiler front end.</dd>
   <dt>debug</dt>
-  <dd>A problem with gererating debugging information.</dd>
+  <dd>A problem with generating debugging information.</dd>
   <dt>driver</dt>
   <dd>A problem with a compiler driver, namely <code>gcc</code>,
    <code>g++</code>, <code>g77</code>, <code>gcj</code> or
