--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -251,7 +251,7 @@ stages of development, branch points, and releases:</p>
        |                                      \
        v                                       v
   New development plan announced           Branch renamed to GCC 3.2 to
-       |              (Jul 14 2002)        accomodate for C++ ABI fixes
+       |              (Jul 14 2002)        accommodate for C++ ABI fixes
        |                                   (C++ binary incompatible with
        |                                   GCC 3.1, see release info)
        |                                          \
