--- a/htdocs/egcs-1.1/index.html
+++ b/htdocs/egcs-1.1/index.html
@@ -161,7 +161,7 @@ EGCS 1.1.1:</p>
 
     <li> Fix multiply defined constructor/destructor symbol problems.</li>
 
-    <li> Avoid setting bogus RPATH environemnt variable during bootstrap.</li>
+    <li> Avoid setting bogus RPATH environment variable during bootstrap.</li>
 
     <li> Avoid GNU-make dependencies in the texinfo subdir.</li>
 
