--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -49,7 +49,7 @@
             <li><a href="#4_1">Why do I get <tt>undefined reference to `main'</tt> 
               errors?</a></li>
             <li><a href="#4_2">Can GCJ only handle source code? </a></li>
-            <li><a href="#4_3">&quot;gcj -C" Doesnt seem to work like javac/jikes. 
+            <li><a href="#4_3">&quot;gcj -C" Doesn't seem to work like javac/jikes. 
               Whats going on? </a></li>
             <li><a href="#4_4">Where does GCJ look for files? </a></li>
             <li><a href="#4_5">How does gcj resolve wether to compile .class or 
@@ -376,7 +376,7 @@ $ ../configure [...]
       <h3><a name="3_4">3.4 My libgcj build fails with "invalid use of undefined type struct sigcontext_struct"</a></h3>
       <dl> 
         <dd>
-          <p>If you're using Linux, this probibly means you need to upgrade to
+          <p>If you're using Linux, this probably means you need to upgrade to
           a newwer, glibc (libc6) based Linux distribution. libgcj does not 
           support the older linux libc5.</p>
           <p>It might be possible to get a working libgcj by changing occurances
@@ -435,7 +435,7 @@ $ ../configure [...]
       </dl>
       
       <hr />
-      <h3><a name="4_3">4.3 &quot;gcj -C"</a> Doesnt seem to work like javac/jikes. 
+      <h3><a name="4_3">4.3 &quot;gcj -C"</a> Doesn't seem to work like javac/jikes. 
         Whats going on?</h3>
       <dl>
         <dd>
@@ -628,7 +628,7 @@ $ ../configure [...]
           of trivial examples for
           <a href="cni-1.txt">version 2.95</a> 
           and <a href="cni-2.txt">version 3.0</a>. 
-          As a comparision, <a href="jni-kaffe.txt">here</a>
+          As a comparison, <a href="jni-kaffe.txt">here</a>
           is the same example as a JNI application using 
           <a href="http://www.kaffe.org">Kaffe</a>.  The same code will
           work with GCJ, as shown <a href="jni-comp.txt">here</a>.</p>
