--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -185,7 +185,7 @@ implementations.
 <tr><td valign="top">
 <b>January 14, 2002</b>
 </td><td>
-Adam Megacz anounced that <a href="http://www.xwt.org">XWT</a> is
+Adam Megacz announced that <a href="http://www.xwt.org">XWT</a> is
 an ActiveX control which is written in Java and compiled with gcj.
 We hope to be checking in his Windows patches in the near future.
 </td></tr>
