--- a/htdocs/java/papers/gcc-java.html
+++ b/htdocs/java/papers/gcc-java.html
@@ -74,7 +74,7 @@ version will provide an integrated Java parser, mainly for
 the sake of compilation speed.)  In any case, it is important
 that cc1java can read bytecodes, for at three reasons:  (1) it
 is the natural way to get declarations of external classes (in
-this respect a Java byetcode file is like a C++ pre-compiled
+this respect a Java bytecode file is like a C++ pre-compiled
 header file);  (2) it is needed so we can support code produced
 from other tools that produce Java bytecodes (such as the Kawa
 Scheme-to-Java-bytecode compiler);  and (3) some libraries are
@@ -118,7 +118,7 @@ copies of the same literal.
 Running a compiled Java program will need a suitable Java run-time
 environment.  This contains support for threads, garbage collection,
 and all the primitive Java methods.  Complete Java support also means
-being able to dynamiclly load new bytecodes classes.  Hence the
+being able to dynamically load new bytecodes classes.  Hence the
 appropriate Java environment is a basically a Java Virtual Machine.
 We are using the Kaffe free Java VM (written by Tim Wilkinson),
 but enhancing and modifying it to be more suitable for pre-compiled
