--- a/htdocs/java/port-files.html
+++ b/htdocs/java/port-files.html
@@ -11,7 +11,7 @@
 
 <p>The classes in <tt>java.io</tt> ultimately require some connection to
 the underlying operating system's notion of files.  This document
-attempts to decribe how to port the native file-handling layer.</p>
+attempts to describe how to port the native file-handling layer.</p>
 
 <p>There are basically two parts to the porting.  First, the
 <tt>FileDescriptor</tt> class is used to represent an open file.  It
