--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -698,7 +698,7 @@ are expected in the future.
 <dd>
 Cygnus donates support for the PowerPC
 750 processor.  The PPC750 is a 32bit superscalar implementation of the
-PowerPC family manufactured by both Motorola and IBM.  The PPC750 is targetted
+PowerPC family manufactured by both Motorola and IBM.  The PPC750 is targeted
 at high end Macs as well as high end embedded applications.
 </dd>
 
