--- a/htdocs/projects/cfg.html
+++ b/htdocs/projects/cfg.html
@@ -80,7 +80,7 @@ to peel more than one iteration.</p>
 
 <p>The current loop optimizer uses information passed by frontend
 to discover loop constructs to simplify flow analysis.
-It is dificult to keep the information up-to-date and nowday
+It is difficult to keep the information up-to-date and nowday
 it is easy to implement the loop discovery code on CFG.
 </p>
 
@@ -141,7 +141,7 @@ need to unshare temporaries, such as tracer or loop unroller.</p>
 
 <h4>Implementation in GCC</h4>
 
-<p>The implemention of the web pass uses Michael Hayes's dataflow
+<p>The implementation of the web pass uses Michael Hayes's dataflow
 module to construct du-chains and unionfind to produce webs.</p>
 
 <h4>Status</h4>
@@ -202,7 +202,7 @@ Profile data is used to control the amount of optimizations.</p>
 <h4>Status</h4>
 
 <p>The code is on the branch. Benefits for Athlon CPU are about 0.5%.
-The code is being reviewed for inclussion by Richard Henderson.</p>
+The code is being reviewed for inclusion by Richard Henderson.</p>
 
 <h3>Thread Safe Profiling</h3>
 
