--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -310,7 +310,7 @@ Completing the patch won't be worthwhile until there is a sufficient
 amount of ILP.</p>
 
 <p>The IBM IA-64 compiler team saw code in important applications that
-could have benefitted from very local data speculation; see comments by
+could have benefited from very local data speculation; see comments by
 Jim McInnes in the minutes of the GCC IA-64 Summit.</p>
 </li>
 
