--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -837,7 +837,7 @@ http://www.sparc.org/standards.html</a>; see A.42.</p>
 
 <p><a name="ref_16">[16]</a>
 <em>SuperH[tm] RISC Engine SH-3/SH-3E/SH3-DSP Programming Manual</em>,
-ADE-602-096B, Rev. 3.0, 9/25/00, Hitatchi, Ltd.;
+ADE-602-096B, Rev. 3.0, 9/25/00, Hitachi, Ltd.;
 a PDF file with a link from
 <a href="http://www.hitachisemiconductor.com/sic/jsp/japan/eng/products/mpumcu/32bit/superh.html">
 http://www.hitachisemiconductor.com/sic/jsp/japan/eng/products/mpumcu/32bit/superh.html</a>.</p>
