--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -248,7 +248,7 @@ source files listed after the bug box along with your report.</p>
 sources (unless you have to report a bug in <code>gnatprep</code>).</p>
 
 <p>When you have checked that your report meets these criteria, please
-submit it accoding to our <a href="#where">generic instructions</a>.
+submit it according to our <a href="#where">generic instructions</a>.
 (If you use a mailing list for reporting, please include an
 "<code>[Ada]</code>" tag in the subject.)</p>
 
@@ -477,7 +477,7 @@ doesn't exist, you need to recompile libstdc++ with
 </ul>
 
 This means you may get lots of errors about things like
-<code>strcmp</code> not being found. You've most likely forgotton to
+<code>strcmp</code> not being found. You've most likely forgotten to
 tell the compiler to look in the <code>std::</code> namespace. There are
 several ways to do this,
 
