--- a/htdocs/java/papers/native++.html
+++ b/htdocs/java/papers/native++.html
@@ -31,7 +31,7 @@ November, 1997
 >Background</H2
 ><P>Not all the code in a Java application can be written in Java.  Some
 must be written in a lower-level language, either for efficiency
-reasons, or to access low-level facilties not accessible in Java.
+reasons, or to access low-level facilities not accessible in Java.
 For this reason, Java methods may be specified as &quot;native&quot;.
 This means that the method has no method body (implementation)
 in the Java source code.  Instead, it has a special flag which
@@ -115,7 +115,7 @@ Note the first <TT
 a thread-specific area, which also includes a pointer to a table of
 functions.  The entire JNI is defined in terms of these functions,
 which cannot be inlined (since that would make JNI methods no
-longer binary compatible accross VMs).<P>The Cygnus Java product will support the JNI, but we will also offer
+longer binary compatible across VMs).<P>The Cygnus Java product will support the JNI, but we will also offer
 a more efficient, lower-level, and more natural native API.
 The basic idea is to make GNU Java compatible with GNU C++ (G++), and provide
 a few hooks in G++ so C++ code can access Java objects as naturally
@@ -257,7 +257,7 @@ is important, one should use the JNI.  Still, it might be nice to have
 portable JNI-based C, or Kaffe-optimize KNI.  The problem is that an
 efficient KNI-style interface is much more inconvenient in C than in C++.
 In C++, we can have the compiler handle inheritance, exception handling,
-name mangling of methods, and so on.  In C the programmmer would have to
+name mangling of methods, and so on.  In C the programmer would have to
 do much more of this by hand.  It should be possible to come up with a
 set of macros for programmers willing to do that.  I am not convinced
 that this is a high priority, given that most environments that support
@@ -512,7 +512,7 @@ The JDK implementation
 and earlier versions of Kaffe also extends 8-bit and 16-bit
 object fields to use a full 32 bits.  However, GNU Java was recently changed
 so that 8-bit and 16-bits fields now only take 8 or 16 bits in an object.
-In general Java field sizes and algnment are now the same as C and C++.<H3
+In general Java field sizes and alignment are now the same as C and C++.<H3
 >Arrays</H3
 ><P>While in many ways Java is similar to C and C++,
 it is quite different in its treatment of arrays.
@@ -542,7 +542,7 @@ public:
 };</PRE
 >
 
-The following convenince <TT
+The following convenience <TT
 >typedefs</TT
 >
 (matching JNI) are provided.
