--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -45,7 +45,7 @@ sites</a>.</p>
 <li>Japan: <a href="ftp://core.ring.gr.jp/pub/GNU/gcc/">core.ring.gr.jp</a></li>
 <li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/GNU/gcc/">ftp.ring.gr.jp</a></li>
 <li>Korea (Seoul): <a href="ftp://linux.sarang.net/pub/mirror/gnu/gnu/gcc/">linux.sarang.net</a></li>
-<li>Nijmegen, Netherlands: <a href="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to Jan Cristiaan van Winkel (jc at ATComputing dot nl)</li>
+<li>The Netherlands (Nijmegen): <a href="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to Jan Cristiaan van Winkel (jc at ATComputing dot nl)</li>
 <li>Poland: <a href="ftp://ftp.task.gda.pl/pub/gnu/gcc/">ftp.task.gda.pl</a>, thanks to ftpadmin at task dot gda dot pl</li>
 <li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/gnu/gcc/">sunsite.icm.edu.pl</a>, thanks to sunsite at icm dot edu dot pl</li>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
