* index.html: Add news item.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -68,6 +68,13 @@ and RPMs are available.
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>January 3, 2003</b>
+</td><td>
+Jeff Sturm implemented libffi closures for SPARC so that libgcj's
+bytecode interpreter is now available on SPARC Solaris hosts.
+</td></tr>
+
+<tr><td valign="top">
 <b>January 1, 2003</b>
 </td><td>
 The January 2003 issue of Linux Journal contains the article
