--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -288,6 +288,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu (Athlon)</td>
+<td>ALT Linux Master 2.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01395.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Caldera 2.4, glibc 2.1.2, kernel 2.2.14</td>
 <td>Successful:
@@ -473,6 +480,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 8.1, glibc 2.2.5, kernel 2.4.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01487.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE eMail Server 3.1, glibc 2.2.2, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01481.html">3.2</a></td>
@@ -609,6 +623,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin6.2</td>
+<td>Mac OS X 10.2.2</td>
+<td>Successful (C only, with patch; detailed instructions):
+<a href="http://gcc.gnu.org/ml/gcc/2003-01/msg00063.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.2.1.0</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
@@ -716,6 +737,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>SunOS 5.5.1, binutils 2.12.1</td>
 <td>Successful (Ada, C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00941.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>binutils 2.9.1</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01432.html">3.2.1</a></td>
 </tr>
 
 <tr>
