--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -19,7 +19,12 @@
         contained in environment variables.  It was neither documented
         nor intended that environment variable paths be ignored, so
         this has been corrected.</li>
-
+    <li>Support for all the systems <a
+        href="../gcc-3.3/changes.html#obsolete_systems">obsoleted in 
+        GCC 3.3</a> has been removed from GCC 3.4.  See <a
+        href="#obsolete_systems">below</a> for a list of systems which 
+        are obsoleted in this release.</li>
+    </li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
@@ -89,7 +94,9 @@
 <h2>Other significant improvements</h2>
 
   <ul>
-    <li>The build system has undergone several significant cleanups.</li>
+    <li>The build system has undergone several significant cleanups.
+        Subdirectories will only be configured if they are being built, 
+        and all subdirectory configures are run from 'make'.</li>
   </ul>
 
 </body>
