--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,15 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>December 27, 2002</b></dt>
+<dd>
+Mark Mitchell of CodeSourcery has contributed a
+<a "http://gcc.gnu.org/ml/gcc/2000-10/msg00573.html">new, hand-crafted
+recursive-descent C++ parser</a> sponsored by the Los Alamos National
+Laboratory.  The new parser is more standard conforming and fixes many bugs
+(about 100 in our bug database alone) from the old YACC-derived parser.
+</dd>
+
 <dt><b>December 4, 2002</b></dt>
 <dd>
 Nathan Sidwell of CodeSourcery has contributed an <a href="http://gcc.gnu.org/ml/gcc-patches/2002-11/msg01858.html">implementation of
