Add PCH announcement.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -32,6 +32,9 @@
 <h3>C/ObjC/C++</h3>
 
   <ul>
+    <li>Precompiled headers are now supported.  Precompiled headers
+        can dramatically speed up compilation of some projects.  There
+        are some restrictions; read the manual for the details.</li>
   </ul>
 
 <h3>C++</h3>
