--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,15 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>January 10, 2003</b></dt>
+<dd>
+Geoffrey Keating of Apple Computer, Inc., with support from Red Hat,
+Inc., has contributed a
+<a "http://gcc.gnu.org/onlinedocs/gcc/Precompiled-Headers.html#Precompiled%20Headers">
+precompiled header</a> implementation that can dramatically speed up
+compilation of some projects.
+</dd>
+
 <dt><b>December 27, 2002</b></dt>
 <dd>
 Mark Mitchell of CodeSourcery has contributed a
