Fix release dates for GCC 3.2.1ff. By Joe Buck <jbuck@synopsys.com>.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -247,7 +247,7 @@ stages of development, branch points, and releases:</p>
        v                                   GCC 3.1 release (May 15 2002)
   GCC 3.2 Stage 1 (ends Jun 15 2002)        \
        |                                     v
-       |                                   GCC 3.1.1 release (Jul 21 2002)
+       |                                   GCC 3.1.1 release (Jul 25 2002)
        |                                      \
        v                                       v
   New development plan announced           Branch renamed to GCC 3.2 to
@@ -256,13 +256,13 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.1, see release info)
        |                                          \
        |                                           v
-       |                                   GCC 3.2 release (Jul 23 2002)
+       |                                   GCC 3.2 release (Aug 14 2002)
        |                                            \
        |                                             v
-       |                                   GCC 3.2.1 release (Oct 15 2002)
+       |                                   GCC 3.2.1 release (Nov 19 2002)
        |                                              \
        |                                               v
-       |                                   GCC 3.2.2 release (...)
+       |                                   GCC 3.2.2 release (not yet scheduled)
        v
   GCC 3.3 Stage 2 (ends Aug 15 2002)
        |
