* gcj-3.3-status.html: Status for Crypto, rhug.

--- a/htdocs/java/gcj-3.3-status.html
+++ b/htdocs/java/gcj-3.3-status.html
@@ -131,7 +131,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </tr>
 
 <tr> <td> <a href="http://sources.redhat.com/rhug/">rhug</a> </td>
-     <td> &nbsp; </td>
+     <td> Problems build all archs; not gcj bug (as far as we know) </td>
      <td> &nbsp; </td>
 </tr>
 
@@ -151,8 +151,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </tr>
 
 <tr> <td> <a href="http://www.gnu.org/software/classpathx/crypto/crypto.html">GNU Crypto</a> </td>
-     <td> &nbsp; </td>
-     <td> &nbsp; </td>
+     <td> 1.1pre5 fine on x86 Linux </td>
+     <td> Tom Tromey </td>
 </tr>
 
 </table>
