--- a/htdocs/reghunt-howto.html
+++ b/htdocs/reghunt-howto.html
@@ -178,7 +178,7 @@ reflection of changes to other files.  If the set of changes is small
 enough you can guess which patch might have caused the regression and
 update only the files changed by that patch.  Remember to look at all
 ChangeLogs that might list relevant changes, not just the obvious ones.
-To get an accurate list of files that changed betwen two times, do a
+To get an accurate list of files that changed between two times, do a
 CVS update to the first date and then a CVS update to the second date,
 and look for lines in the output from the second update that begin
 with "U ".</p>
