Corrects sed command.

--- a/htdocs/bugs/minimize.html
+++ b/htdocs/bugs/minimize.html
@@ -139,7 +139,7 @@ of the following:</p>
 
 <ul>
   <li><code>perl -pi -e 's/^#.*\n//g;' bug.ii</code></li>
-  <li><code>sed 's/^#/d' bug.ii &gt; bug2.ii</code></li>
+  <li><code>sed '/^#/d' bug.ii &gt; bug2.ii</code></li>
   <li>within <code>vi</code>: <code>:g/^#/d</code></li>
 </ul>
 
