Announce Gabriel Dos Reis as release manager for GCC 3.2.2.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,14 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>January 22, 2003</b></dt>
+<dd>
+The GCC Steering Committee has named Gabriel Dos Reis as release manager for
+the upcoming GCC 3.2.2 release, allowing Mark Mitchell to focus his
+efforts on the GCC 3.3 and 3.4 releases.  3.2.2 is intended to be a bug
+fix release only.
+</dd>
+
 <dt><b>January 10, 2003</b></dt>
 <dd>
 Geoffrey Keating of Apple Computer, Inc., with support from Red Hat,
