--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -14,6 +14,39 @@ home page</a>.</p>
 
 <!-- ATTENTION: This page is for *OLD* news! -->
 
+<dt><b>May 15, 2002</b></dt>
+<dd>
+<a href="gcc-3.1/">GCC 3.1</a> has been released.
+</dd>
+
+<dt><b>May 5, 2002</b></dt>
+<dd>
+Aldy Hernandez, of Red Hat, Inc,
+has contributed extensions to the PowerPC port supporting the AltiVec
+programming model (SIMD).  The support, though presently useful, is
+experimental and is expected to stabilize for 3.2.  The support is
+written to conform to Motorola's AltiVec specs.
+</dd>
+
+<dt><b>May 2, 2002</b></dt>
+<dd>
+HP and CodeSourcery announced that HP
+will sponsor Mark Mitchell's work as GCC Release Manager through April 2003.
+</dd>
+
+<dt><b>April 30, 2002</b></dt>
+<dd>
+Vladimir Makarov, of Red Hat, Inc, has
+contributed a new scheme for describing processor pipelines, commonly
+referred to as the <a href="news/dfa.html"> DFA scheduler.</a>
+</dd>
+
+<dt><b>April 15, 2002</b></dt>
+<dd>
+The Chill front end (that already was omitted from GCC 3.0) has been removed
+from the GCC source tree.
+</dd>
+
 <dt><b>February 25, 2002</b></dt>
 <dd>
 We have branched for GCC 3.1 (<a href="gcc-3.1/criteria.html">release
