Update branching docs to mention --disable-checking and --disable-werror

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -54,6 +54,13 @@ actually called from cron.)</li>
 <li>Regenerate <code>gcc.pot</code> and send it to the translation
 project.</li>
 
+<li>Update the file <code>gcc/configure.in</code> so that
+<code>--disable-checking</code> is the default.</li>
+
+<li>For branches of GCC 3.4 or later, update the file
+<code>gcc/configure.in</code> so that <code>--disable-werror</code> is
+the default.</li>
+
 </ol>
 
 </body>
