--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -67,6 +67,10 @@
 <h2>New Targets and Target Specific Improvements</h2>
 
   <ul>
+    <li>Support for the SH2E processor has been added to the SH port.
+    Enabled at run time with the <code>-m2e</code> command line
+    switch, or at configure time by specifying sh2e as the machine
+    part of the target triple.</li>
   </ul>
 
 
