Mention -W -> -Wextra rename.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -106,6 +106,9 @@
         Subdirectories will only be configured if they are being built, 
         and all subdirectory configures are run from the <code>make</code>
         command.</li>
+    <li>The <code>-W</code> warning option has been renamed to
+        <code>-Wextra</code>, which is more easily understood.  The older
+        spelling will be retained for backwards compatibility.
   </ul>
 
 </body>
